IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/30/14: In eTomo - Setup Reconstruction, allowing .mrc image files to be
selected, and renaming them to .st.(Bug# 1696)

1/30/14: In eTomo fixed bugs in the Directive Editor.(Bug# 1721)

1/30/14: In eTomo - Directive Editor, fixed bugs which where causing unchanged
directives to be display in the default mode.(Bug# 1772)

1/30/14: In eTomo - Directive Editor, getting CTF defaults from origcoms.
(Bug# 1715)

1/29/13: IMOD_4-6-39
1/29/13: Changed Newstack floating to truncate images with extreme ranges
instead of scaling them to a different mean/SD.

1/29/14: In eTomo - Coarse Alignment, fixed a problem with graphing edge
errors.(Bug# 1774)

1/29/14: In eTomo improving error handling for an empty fiducial diameter
field.(Bug# 1671)

1/29/14: Fixed problems with autofidseed in eTomo - Fiducial Model Dialog.
(Bug# 1743)

1/29/14: Exposed flgNoReferenceRefinement in eTomo - PEET.(Bug# 1738)

1/28/13: Restored fortran graphics program wrappers to Mac build, lost 1/13.

1/20/13: IMOD_4-6-38
1/20/13: Fixed keypad hot keys in Model View on Mac.

1/18/14: IMOD_4-6-37

1/18/14: Further polishing of Grab with Note, which can now be used to draw
multiple arrows in Zap or Slicer windows.

1/16/14: IMOD_4-6-36
1/16/14: Jane Ding contributed Grab with Note plugin, which takes Slicer or Zap
snapshots with notes added below the image.

1/16/14: Fixed creation of patch tracking com file if mag change searched in
coarse align.

1/16/14: Change eTomo to make it independent of Cygwin.  Fixed a problem with
killing processes on Windows.(Bug# 1716)

1/14/14: Fixed bug in clip multiplying while unpacking 4-bit data, added
rounding in clip multiply or divide when outout is to an integer.

1/12/14: Made Imodchopconts able to chop up or sort out contours based on
fine-grained color.

1/11/14: Fixed 3dmod crash when the I button is pressed in Zap and no image
loaded, present since 4.6.29.
