@@ -3,6 +3,13 @@ IMOD History
 1/30/14: In eTomo - Setup Reconstruction, allowing .mrc image files to be
 selected, and renaming them to .st.(Bug# 1696)
 
+1/30/14: IMOD_4-6-40
+1/30/14: Switched to outputting signed bytes by default.  BYTE FILES WILL NO
+LONGER BE READABLE BY VERSIONS BEFORE IMOD 4.3.
+
+1/30/14: Fixed execute permission on Autofidseed and added option for passing
+options to Imodfindbeads.
+
 1/30/14: In eTomo fixed bugs in the Directive Editor.(Bug# 1721)
 
 1/30/14: In eTomo - Directive Editor, fixed bugs which where causing unchanged
